traducido archvio using/unix.po

--- a/using/unix.po
+++ b/using/unix.po
@@ -77,15 +77,16 @@ msgid ""
 "https://docs.fedoraproject.org/en-US/package-maintainers/"
 "Packaging_Tutorial_GNU_Hello/"
 msgstr ""
+"https://docs.fedoraproject.org/en-US/package-maintainers/"
+"Packaging_Tutorial_GNU_Hello/"
 
 #: ../Doc/using/unix.rst:34
 msgid "for Fedora users"
 msgstr "para los usuarios de Fedora"
 
 #: ../Doc/using/unix.rst:35
-#, fuzzy
 msgid "https://slackbook.org/html/package-management-making-packages.html"
-msgstr "http://www.slackbook.org/html/package-management-making-packages.html"
+msgstr "http://slackbook.org/html/package-management-making-packages.html"
 
 #: ../Doc/using/unix.rst:36
 msgid "for Slackware users"
@@ -114,7 +115,6 @@ msgid "Building Python"
 msgstr "Construyendo Python"
 
 #: ../Doc/using/unix.rst:62
-#, fuzzy
 msgid ""
 "If you want to compile CPython yourself, first thing you should do is get "
 "the `source <https://www.python.org/downloads/source/>`_. You can download "
@@ -122,11 +122,11 @@ msgid ""
 "devguide.python.org/setup/#get-the-source-code>`_.  (If you want to "
 "contribute patches, you will need a clone.)"
 msgstr ""
-"Si quisiera compilar CPython por sí mismo, lo primero que debería hacer es "
+"Si desea compilar CPython por sí mismo, lo primero que debería hacer es "
 "obtener la `fuente <https://www.python.org/downloads/source/>`_. Puede "
-"descargar la fuente de la última versión o simplemente obtener un nuevo "
-"`clon <https://devguide.python.org/setup/#getting-the-source-code>`_. Si "
-"desea contribuir con parches, necesitará un clon."
+"descargar la fuente de la última versión o simplemente conseguir un nuevo "
+"`clon <https://devguide.python.org/setup/#get-the-source-code>`_. Si desea "
+"contribuir con parches, necesitará un clon."
 
 #: ../Doc/using/unix.rst:68
 msgid "The build process consists of the usual commands::"
@@ -158,7 +158,6 @@ msgid "Python-related paths and files"
 msgstr "Rutas y archivos relacionados con Python"
 
 #: ../Doc/using/unix.rst:88
-#, fuzzy
 msgid ""
 "These are subject to difference depending on local installation "
 "conventions; :option:`prefix <--prefix>` and :option:`exec_prefix <--exec-"
@@ -166,9 +165,9 @@ msgid ""
 "software; they may be the same."
 msgstr ""
 "Estos están sujetos a diferencias según las convenciones de instalación "
-"locales; :envvar:`prefix` (``${prefix}``) y :envvar:`exec_prefix` "
-"(``${exec_prefix}``) son dependientes de la instalación y deben "
-"interpretarse como software GNU; deben ser iguales."
+"locales; :option:`prefix <--prefix>` y :option:`exec_prefix <--exec-prefix>` "
+"son dependientes de la instalación y deben interpretarse como en el software "
+"GNU; pueden ser iguales."
 
 #: ../Doc/using/unix.rst:93
 msgid ""
@@ -291,13 +290,12 @@ msgstr ""
 "no ``install``. El destino ``install_sw`` no anula ``openssl.cnf``."
 
 #: ../Doc/using/unix.rst:165
-#, fuzzy
 msgid ""
 "Build Python with custom OpenSSL (see the configure ``--with-openssl`` and "
 "``--with-openssl-rpath`` options)"
 msgstr ""
-"Compile Python con OpenSSL personalizado (consulte las opciones configure `--"
-"with-openssl` y` --with-openssl-rpath`)"
+"Construir Python con OpenSSL personalizado (consulte las opciones configure "
+"``--with-openssl`` y ``--with-openssl-rpath``)"
 
 #: ../Doc/using/unix.rst:180
 msgid ""
