fix no backticks

--- a/tutorial/floatingpoint.po
+++ b/tutorial/floatingpoint.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
-"PO-Revision-Date: 2023-10-14 19:43-0300\n"
+"PO-Revision-Date: 2023-10-14 19:53-0300\n"
 "Last-Translator: Carlos A. Crespo <lvccrespo@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -387,7 +387,7 @@ msgid ""
 "in uncommon cases where large magnitude inputs mostly cancel each other out "
 "leaving a final sum near zero:"
 msgstr ""
-"La función :func:math.fsum() va más allá y realiza un seguimiento de todos "
+"La función :func:`math.fsum()` va más allá y realiza un seguimiento de todos "
 "los \"dígitos perdidos\" a medida que se agregan valores a un total en "
 "ejecución, de modo que el resultado tiene solo un redondeo. Esto es más "
 "lento que :func:`sum`, pero será más preciso en casos poco comunes en los "
