--- a/tutorial/floatingpoint.po
+++ b/tutorial/floatingpoint.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
-"PO-Revision-Date: 2023-10-14 19:53-0300\n"
+"PO-Revision-Date: 2023-10-14 20:05-0300\n"
 "Last-Translator: Carlos A. Crespo <lvccrespo@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -437,8 +437,8 @@ msgstr ""
 "binaria. Desde al menos el año 2000, casi todas las máquinas utilizan la "
 "aritmética de punto flotante binaria IEEE 754, y casi todas las plataformas "
 "asignan los números de punto flotante de Python a valores binarios de 64 "
-"bits de precisión \"doble\" de IEEE 754. Los valores binarios de IEEE 754 "
-"bynary64 contienen 53 bits de precisión, por lo que en la entrada, la "
+"bits de precisión \"doble\" de IEEE 754. Los valores binarios de IEEE 754 de "
+"64 bits contienen 53 bits de precisión, por lo que en la entrada, la "
 "computadora se esfuerza por convertir 0.1 en la fracción más cercana de la "
 "forma *J*/2**\\ *N* donde *J* es un número entero que contiene exactamente "
 "53 bits. Reescribiendo ::"
