--- a/using/unix.po
+++ b/using/unix.po
@@ -86,7 +86,7 @@ msgstr "para los usuarios de Fedora"
 
 #: ../Doc/using/unix.rst:35
 msgid "https://slackbook.org/html/package-management-making-packages.html"
-msgstr "http://slackbook.org/html/package-management-making-packages.html"
+msgstr "https://slackbook.org/html/package-management-making-packages.html"
 
 #: ../Doc/using/unix.rst:36
 msgid "for Slackware users"
@@ -125,8 +125,8 @@ msgstr ""
 "Si desea compilar CPython por sí mismo, lo primero que debería hacer es "
 "obtener la `fuente <https://www.python.org/downloads/source/>`_. Puede "
 "descargar la fuente de la última versión o simplemente conseguir un nuevo "
-"`clon <https://devguide.python.org/setup/#get-the-source-code>`_. Si desea "
-"contribuir con parches, necesitará un clon."
+"`clon <https://devguide.python.org/setup/#get-the-source-code>`_. (Si desea "
+"contribuir con parches, necesitará un clon.)"
 
 #: ../Doc/using/unix.rst:68
 msgid "The build process consists of the usual commands::"
