--- a/using/unix.po
+++ b/using/unix.po
@@ -86,7 +86,7 @@ msgstr "para los usuarios de Fedora"
 
 #: ../Doc/using/unix.rst:35
 msgid "https://slackbook.org/html/package-management-making-packages.html"
-msgstr "http://slackbook.org/html/package-management-making-packages.html"
+msgstr "https://slackbook.org/html/package-management-making-packages.html"
 
 #: ../Doc/using/unix.rst:36
 msgid "for Slackware users"
