--- a/tutorial/introduction.po
+++ b/tutorial/introduction.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.12\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
-"PO-Revision-Date: 2023-10-15 20:04-0300\n"
+"PO-Revision-Date: 2023-10-15 20:19-0300\n"
 "Last-Translator: Carlos A. Crespo <lvccrespo@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -217,7 +217,7 @@ msgid ""
 "To quote a quote, we need to \"escape\" it, by preceding it with ``\\``. "
 "Alternatively, we can use the other type of quotation marks::"
 msgstr ""
-"Para citar una cita, debemos \"escaparla\" precediéndola con ``\\``. "
+"Para citar una cita, debemos \"escapar\" la cita precediéndola con ``\\``. "
 "Alternativamente, podemos usar el otro tipo de comillas::"
 
 #: ../Doc/tutorial/introduction.rst:171
@@ -336,7 +336,7 @@ msgid ""
 "used to obtain individual characters, *slicing* allows you to obtain a "
 "substring::"
 msgstr ""
-"Además de los índices, las *rebanadas* (slicing) también están soportadas. "
+"Además de los índices, las *rebanadas (slicing) también están soportadas. "
 "Mientras que la indexación se utiliza para obtener caracteres individuales, "
 "*rebanar* te permite obtener una subcadena::"
 
