--- a/using/configure.po
+++ b/using/configure.po
@@ -49,8 +49,8 @@ msgid ""
 "org/wiki/NaN#Floating_point>`_."
 msgstr ""
 "Soporte para números en coma flotante `IEEE 754 <https://en.wikipedia.org/"
-"wiki/IEEE_754>`_ `NaN en coma flotante <https://en.wikipedia.org/wiki/"
-"NaN#Floating_point>`_."
+"wiki/IEEE_754>`_ y `Not-a-Number (NaN) en coma flotante <https://en."
+"wikipedia.org/wiki/NaN#Floating_point>`_."
 
 #: ../Doc/using/configure.rst:19
 msgid "Support for threads."
@@ -79,15 +79,15 @@ msgstr "Ahora se necesita OpenSSL 1.1.1."
 
 #: ../Doc/using/configure.rst:32
 msgid "Thread support and OpenSSL 1.0.2 are now required."
-msgstr "Ahora se necesita compatibilidad de Thread y OpenSSL 1.0.2."
+msgstr "Ahora se necesita soporte de hilos y OpenSSL 1.0.2."
 
 #: ../Doc/using/configure.rst:35
 msgid ""
 "Selected C99 features are now required, like ``<stdint.h>`` and ``static "
 "inline`` functions."
 msgstr ""
-"Ahora se necesitan características seleccionadas de C99, como las funciones "
-"``<stdint.h>`` y ``static inline``."
+"Ahora se necesitan características seleccionadas de C99, como ``<stdint.h>`` "
+"y funciones ``static inline``."
 
 #: ../Doc/using/configure.rst:39
 msgid "On Windows, Visual Studio 2015 or later is required."
@@ -120,8 +120,8 @@ msgid ""
 "tools used to regenerate them. Search for ``regen-*`` make targets."
 msgstr ""
 "El archivo ``Makefile.pre.in`` documenta archivos generados, sus entradas y "
-"las herramientas que se usaron para regenerarlas. Busque ``regen-*`` para "
-"crear objetivos."
+"las herramientas que se usaron para regenerarlos. Busque los objetivos make "
+"``regen-*``."
 
 #: ../Doc/using/configure.rst:60
 msgid ""
@@ -133,7 +133,7 @@ msgid ""
 msgstr ""
 "El comando ``make regen-configure`` ejecuta el contenedor `tiran/"
 "cpython_autoconf <https://github.com/tiran/cpython_autoconf>`_ para la "
-"compilación reproducible; consulte el script contenedor ``entry.sh``. El "
+"compilación reproducible; consulte el script ``entry.sh`` del contenedor. El "
 "contenedor es opcional, el siguiente comando se puede ejecutar localmente, "
 "los archivos generados dependen de las versiones autoconf y aclocal::"
 
@@ -1377,7 +1377,7 @@ msgid ""
 "`PyMODINIT_FUNC` macros of :file:`Include/exports.h` are defined differently "
 "depending if the ``Py_BUILD_CORE_MODULE`` macro is defined:"
 msgstr ""
-"Las :c:macro:`!PyAPI_FUNC()`, :c:macro:`!PyAPI_DATA()` y :c:macro:"
+"Las macros :c:macro:`!PyAPI_FUNC()`, :c:macro:`!PyAPI_DATA()` y :c:macro:"
 "`PyMODINIT_FUNC` de :file:`Include/exports.h` se definen de manera diferente "
 "dependiendo si es definida la macro ``Py_BUILD_CORE_MODULE``:"
 
@@ -1485,8 +1485,8 @@ msgid ""
 "`CFLAGS` once Python is installed (:gh:`65320`)."
 msgstr ""
 ":envvar:`CFLAGS_NODIST` se usa para compilar el intérprete y las extensiones "
-"stdlib C. Úselo cuando un indicador del compilador *no* sea parte de :envvar:"
-"`CFLAGS` una vez que Python esté instalado (:gh:`65320`)."
+"stdlib C. Úselo cuando un indicador del compilador *no* deba ser parte de :"
+"envvar:`CFLAGS` una vez que Python esté instalado (:gh:`65320`)."
 
 #: ../Doc/using/configure.rst:845
 msgid "In particular, :envvar:`CFLAGS` should not contain:"
@@ -1668,8 +1668,8 @@ msgid ""
 "`LDFLAGS` once Python is installed (:gh:`65320`)."
 msgstr ""
 ":envvar:`LDFLAGS_NODIST` se usa de la misma manera que :envvar:"
-"`CFLAGS_NODIST`. Usar cuando un indicador del enlazador *no* sea parte de :"
-"envvar:`LDFLAGS` una vez que Python esté instalado (:gh:`65320`)."
+"`CFLAGS_NODIST`. Usar cuando un indicador del enlazador *no* deba ser parte "
+"de :envvar:`LDFLAGS` una vez que Python esté instalado (:gh:`65320`)."
 
 #: ../Doc/using/configure.rst:975
 msgid "In particular, :envvar:`LDFLAGS` should not contain:"
