Traducido archivo reference/import.p

--- a/reference/import.po
+++ b/reference/import.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
-"PO-Revision-Date: 2021-08-02 19:27+0200\n"
+"PO-Revision-Date: 2023-10-15 16:21-0700\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.13.0\n"
+"X-Generator: Poedit 3.4\n"
 
 #: ../Doc/reference/import.rst:6
 msgid "The import system"
@@ -652,7 +653,7 @@ msgid ""
 "if the finder does not implement ``find_spec()``."
 msgstr ""
 "El método :meth:`~importlib.abc.MetaPathFinder.find_spec` de los buscadores "
-"de metarutas de la ruta de acceso reemplazó :meth:`~importlib.abc."
+"de meta rutas de la ruta de acceso reemplazó :meth:`~importlib.abc."
 "MetaPathFinder.find_module`, que ahora está en desuso. Aunque seguirá "
 "funcionando sin cambios, la maquinaria de importación sólo lo intentará si "
 "el buscador no implementa ``find_spec()``."
@@ -669,6 +670,8 @@ msgstr ""
 #: ../Doc/reference/import.rst:336
 msgid "``find_module()`` has been removed.  Use :meth:`find_spec` instead."
 msgstr ""
+"Se eliminó el método ``find_module()``. Utiliza el método :meth:`find_spec` "
+"en su lugar."
 
 #: ../Doc/reference/import.rst:341
 msgid "Loading"
@@ -1034,6 +1037,8 @@ msgid ""
 "It is **strongly** recommended that you rely on :attr:`__spec__` and its "
 "attributes instead of any of the other individual attributes listed below."
 msgstr ""
+"Es **altamente** recomendado utilizar :attr:`__spec__` y sus atributos en "
+"lugar de cualquiera de los otros atributos individuales listados abajo."
 
 #: ../Doc/reference/import.rst:550
 msgid ""
@@ -1063,6 +1068,8 @@ msgid ""
 "It is **strongly** recommended that you rely on :attr:`__spec__` instead "
 "instead of this attribute."
 msgstr ""
+"Es **altamente** recomendado utilizar :attr:`__spec__` en lugar de este "
+"atributo."
 
 #: ../Doc/reference/import.rst:564
 msgid ""
@@ -1070,6 +1077,9 @@ msgid ""
 "loader``.  The use of ``__loader__`` is deprecated and slated for removal in "
 "Python 3.14."
 msgstr ""
+"Se espera que el valor de ``__loader__`` sea el mismo que el de ``__spec__."
+"loader``. Es uso de ``__loader__`` es obsoleto y será eliminado en Python "
+"3.14."
 
 #: ../Doc/reference/import.rst:571
 #, fuzzy
@@ -1113,12 +1123,16 @@ msgid ""
 ":exc:`ImportWarning` is raised if import falls back to ``__package__`` "
 "instead of :attr:`~importlib.machinery.ModuleSpec.parent`."
 msgstr ""
+"Se genera un :exc:`ImportWarning` si el módulo importado recurre a "
+"``__package__`` en lugar de a :attr:`~importlib.machinery.ModuleSpec.parent`."
 
 #: ../Doc/reference/import.rst:594
 msgid ""
 "Raise :exc:`DeprecationWarning` instead of :exc:`ImportWarning` when falling "
 "back to ``__package__``."
 msgstr ""
+"Se genera :exc:`DeprecationWarning` en lugar de :exc:`ImportWarning` cuando "
+"recurre a ``__package__``."
 
 #: ../Doc/reference/import.rst:601
 msgid ""
@@ -1226,6 +1240,8 @@ msgid ""
 "It is **strongly** recommended that you rely on :attr:`__spec__` instead "
 "instead of ``__cached__``."
 msgstr ""
+"Es **altamente** recomendado utilizar :attr:`__spec__` en lugar de "
+"``__cached__``."
 
 #: ../Doc/reference/import.rst:658
 msgid "module.__path__"
@@ -1356,6 +1372,9 @@ msgid ""
 "removed in Python 3.12 and is no longer called during the resolution of a "
 "module's repr."
 msgstr ""
+"El uso de :meth:`!module_repr`, al ser obsoleto desde Python 3.4, fue "
+"eliminado en Python 3.12 y no es llamado durante la resolución de la "
+"representación (*repr*) de un módulo."
 
 #: ../Doc/reference/import.rst:716
 msgid "Cached bytecode invalidation"
@@ -1838,7 +1857,7 @@ msgstr ""
 
 #: ../Doc/reference/import.rst:930
 msgid "``find_module()`` and ``find_loader()`` have been removed."
-msgstr ""
+msgstr "Los métodos ``find_module()`` y ``find_loader()`` fueron eliminados."
 
 #: ../Doc/reference/import.rst:935
 msgid "Replacing the standard import system"
@@ -2128,7 +2147,7 @@ msgstr ""
 
 #: ../Doc/reference/import.rst:8
 msgid "import machinery"
-msgstr ""
+msgstr "maquinaria de importación"
 
 #: ../Doc/reference/import.rst:64 ../Doc/reference/import.rst:95
 #: ../Doc/reference/import.rst:129
@@ -2148,7 +2167,7 @@ msgstr "Paquetes de espacio de nombres"
 
 #: ../Doc/reference/import.rst:129
 msgid "portion"
-msgstr ""
+msgstr "porción"
 
 #: ../Doc/reference/import.rst:175
 #, fuzzy
@@ -2157,7 +2176,7 @@ msgstr "Submódulos"
 
 #: ../Doc/reference/import.rst:210 ../Doc/reference/import.rst:276
 msgid "finder"
-msgstr ""
+msgstr "buscador"
 
 #: ../Doc/reference/import.rst:210
 #, fuzzy
@@ -2186,7 +2205,7 @@ msgstr "Ganchos de importación"
 
 #: ../Doc/reference/import.rst:249
 msgid "hooks"
-msgstr ""
+msgstr "ganchos"
 
 #: ../Doc/reference/import.rst:249
 #, fuzzy
@@ -2195,11 +2214,11 @@ msgstr "Ganchos de importación"
 
 #: ../Doc/reference/import.rst:249
 msgid "meta"
-msgstr ""
+msgstr "meta"
 
 #: ../Doc/reference/import.rst:249
 msgid "path"
-msgstr ""
+msgstr "ruta (*path*)"
 
 #: ../Doc/reference/import.rst:276
 #, fuzzy
@@ -2208,7 +2227,7 @@ msgstr "La meta ruta (*path*)"
 
 #: ../Doc/reference/import.rst:276
 msgid "find_spec"
-msgstr ""
+msgstr "find_spec"
 
 #: ../Doc/reference/import.rst:744
 #, fuzzy
@@ -2217,19 +2236,19 @@ msgstr "El buscador basado en rutas"
 
 #: ../Doc/reference/import.rst:793
 msgid "sys.path"
-msgstr ""
+msgstr "sys.path"
 
 #: ../Doc/reference/import.rst:793
 msgid "sys.path_hooks"
-msgstr ""
+msgstr "sys.path_hooks"
 
 #: ../Doc/reference/import.rst:793
 msgid "sys.path_importer_cache"
-msgstr ""
+msgstr "sys.path_importer_cache"
 
 #: ../Doc/reference/import.rst:793
 msgid "PYTHONPATH"
-msgstr ""
+msgstr "PYTHONPATH"
 
 #~ msgid ""
 #~ "Use of :meth:`loader.module_repr() <importlib.abc.Loader.module_repr>` "
