--- a/using/windows.po
+++ b/using/windows.po
@@ -1740,11 +1740,11 @@ msgid ""
 "following :pep:`514` will be discoverable. The ``--list`` command lists all "
 "available runtimes using the ``-V:`` format."
 msgstr ""
-"El argumento -x.y es la forma corta del argumento -V:Company/Tag, que permite "
+"El argumento ``-x.y`` es la forma corta del argumento ``-V:Company/Tag``, que permite "
 "seleccionar un entorno de ejecución Python específico, incluidos aquellos que "
 "pueden haber provenido de lugares diferentes a python.org. Cualquier entorno "
-"registrado siguiendo el :pep:514 será detectable. El comando --list muestra todos "
-"los entornos disponibles usando el formato -V:. "
+"registrado siguiendo el :pep:`514` será detectable. El comando ``--list`` muestra todos "
+"los entornos disponibles usando el formato ``-V:``."
 
 #: ../Doc/using/windows.rst:763
 msgid ""
@@ -2074,10 +2074,10 @@ msgid ""
 "e. py.exe) and for the 'windows' version (i.e. pyw.exe)."
 msgstr ""
 "El lanzador buscará dos archivos .ini - ``py.ini`` en el directorio de "
-"datos de aplicación del usuario actual (``%LOCALAPPDATA%`` o ``$env:LocalAppData``)
-"y ``py.ini`` en el mismo directorio que el lanzador. Los mismos archivos"
-".ini son utilizados tanto para la versión 'consola' del lanzador (es decir, py.exe)"
-"como para la version 'windows' (es decir pyw.exe)"
+"datos de aplicación del usuario actual (``%LOCALAPPDATA%`` o ``$env:LocalAppData``) "
+"y ``py.ini`` en el mismo directorio que el lanzador. Los mismos archivos "
+".ini son utilizados tanto para la versión 'consola' del lanzador (es decir, py.exe) "
+"como para la version 'windows' (es decir pyw.exe)."
 
 #: ../Doc/using/windows.rst:952
 msgid ""
@@ -2808,7 +2808,7 @@ msgid ""
 "users to install Python."
 msgstr ""
 "`cx_Freeze <https://cx-freeze.readthedocs.io/en/latest/>`_ envuelve scripts"
-"de Python en programas ejecutables de Windows (archivos :file:{*}.exe)."
+"de Python en programas ejecutables de Windows (archivos :file:`{*}.exe`)."
 "Cuando hayas hecho esto, puedes distribuir tu aplicación sin requerir que"
 "tus usuarios instalen Python."
 
